--- a/src/partials/educacion/faq_1.html
+++ b/src/partials/educacion/faq_1.html
@@ -98,7 +98,7 @@
           <p>
             ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Renta Vitalicia! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
           </p>
-          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_rentas_vitalicias.pdf" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
+          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_rentas_vitalicias.pdf" target="_blank" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
        
         </div>
       </div>
