--- a/src/partials/educacion/faq_2.html
+++ b/src/partials/educacion/faq_2.html
@@ -7,7 +7,6 @@
         <div class="fqs_info">
           <p>
             Es un seguro cuyo objetivo es garantizar a los cotizantes a pensión el pago de una pensión en caso de invalidez o a sus beneficiarios en caso de fallecimiento, siempre que estas circunstancias se deban a una enfermedad o accidente de origen común, es decir, no laboral.
-Fuente: Fasecolda
           </p>
           <p>
             <b class="font-bold">Fuente: Fasecolda</b>
@@ -28,7 +27,7 @@ Fuente: Fasecolda
             <ol>
               <li>1. Contar con un mínimo de 50 semanas cotizadas al sistema de Pensiones en los últimos 3 años anteriores a la fecha de su fallecimiento o de su invalidez.</li>
               <li>2. En caso de invalidez, si es menor de 20 años, solo debe haber cotizado 26 semanas en el último año anterior al hecho causante de su invalidez o fallecimiento.</li>
-              <li>3. En caso de invalidez, si el beneficiario ha cotizado al menos el 75% de las semanas mínimas requeridas para acceder a la pensión por vejez, solo necesita 25 semanas en los últimos 3 años..</li>
+              <li>3. En caso de invalidez, si el beneficiario ha cotizado al menos el 75% de las semanas mínimas requeridas para acceder a la pensión por vejez, solo necesita 25 semanas en los últimos 3 años.</li>
               <li>4. En caso de pensión de sobrevivencia, los beneficiarios accederán al pago de la pensión si el afiliado cotizó el número de semanas mínimo requerido en el régimen de prima media, sin que haya tramitado o recibido una indemnización sustitutiva de la pensión de vejez o la devolución de saldos.</li>
             </ol>
           </p>
@@ -52,7 +51,28 @@ Fuente: Fasecolda
             <ul>
               <li>Si la pérdida de capacidad laboral es igual o superior al 50% e inferior al 66%, la pensión será del 45% del promedio de los últimos 10 años del salario sobre el cual se cotizó (IBL), más el 1.5% adicional por cada 50 semanas adicionales a las primeras 500.</li>
               <li>Si la pérdida de capacidad laboral es igual o superior al 66%, la pensión será del 54% del IBL más 2% adicional por cada 50 semanas adicionales de las primeras 800.</li>
-              <li>En ningún caso la pensión podrá ser inferior al Salario Mínimo Legal mensual vigente ni superior al 75% del IBL.</li>
+              <li>En ningún caso la pensión podrá ser inferior al Salario Mínimo Legal Mensual Vigente ni superior al 75% del IBL.</li>
+            </ul>
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          En caso de fallecimiento, ¿qué reciben los beneficiarios?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            El beneficio de la pensión de sobrevivencia cuyo valor depende de las semanas cotizadas y otros factores:</p>
+          <p>
+            <ul>
+              <li>En general, la pensión de sobrevivencia equivale al 45% del IBL más un 2% adicional por cada 50 semanas adicionales a las primeras 500, sin que sea más del 75%</li>
+              <li>La pensión no podrá ser inferior al Salarios Mínimo legal Mensual Vigente (SMLMV)</li>
+              <li>Los beneficiarios recibirán el 100% de la pensión que recibía el pensionado al momento de su fallecimiento.</li>
             </ul>
           </p>
           <p>
@@ -68,9 +88,9 @@ Fuente: Fasecolda
         </h4>
         <div class="fqs_info">
           <p>
-            Podrán ser beneficiarios de la pensión por sobrevivencia las siguientes personas del grupo familiar:
-De forma vitalicia:
-          </p>
+            Podrán ser beneficiarios de la pensión por sobrevivencia las siguientes personas del grupo familiar:</p>
+         <p>De forma vitalicia:</p>
+          
           <p>
             <ul>
               <li>El cónyuge o compañero permanente mayor de 30 años o menor de 30 años si tiene hijos con el beneficiario y los hijos están en condición de invalidez al momento del siniestro.</li>
@@ -109,7 +129,7 @@ De forma vitalicia:
           <p>
             ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Seguro Previsional! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
           </p>
-          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_rentas_vitalicias.pdf" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
+          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_previsional.pdf" target="_blank" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
         </div>
       </div>
     </li>
