--- a/src/partials/educacion/info_cursos.html
+++ b/src/partials/educacion/info_cursos.html
@@ -6,7 +6,7 @@
           Para nosotros es importante dar a conocer los conceptos básicos de
           finanzas personales, seguros y el manejo del dinero, para ello tenemos
           a tu disposición los cursos de educación financiera de Fasecolda, los
-          cuales podrás consultar haciendo clic aquí
+          cuales podrás consultar haciendo  <a href="https://www.vivasegurofasecolda.com/" target="_blank" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a>
         </p>
       </div>
       <img class="img_seguro" src="/assets/images/img_viva_seguro.webp" alt="Viva seguro" />
