--- a/src/partials/educacion/tabs.html
+++ b/src/partials/educacion/tabs.html
@@ -28,8 +28,8 @@
                     alt="Renta Vitalicia"
                   />
                 </div>
-                <div class="as__servicios_content">
-                  <p><span>Renta</span> <b>Vitalicia</b></p>
+                <div class="as__servicios_content" style="width: 250px;">
+                  <p style="font-size: 1.8em;"><span>Renta</span> <b>Vitalicia</b></p>
                 </div>
               </div>
             </a>
@@ -48,8 +48,8 @@
                     alt="Seguro Previsional"
                   />
                 </div>
-                <div class="as__servicios_content">
-                  <p><span>Seguro</span> <b>Previsional</b></p>
+                <div class="as__servicios_content" style="width: 282px;">
+                  <p style="font-size: 1.8em;"><span>Seguro</span> <b>Previsional</b></p>
                 </div>
               </div>
             </a>
