--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -21,12 +21,10 @@
 
         <div class="modal_info_int">
           <h4>Patricia Restrepo</h4>
-          <h6>CEO</h6>
+          <h6>Presidente</h6>
           <blockquote>
             <p>
-              "Motivo y desafío a los integrantes de ASULADO para que a través
-              de la disciplina y creatividad transformemos la industria
-              aseguradora del país para que tenga un gran impacto social."
+              “Motivo y desafío a los integrantes de ASULADO para que a través de la disciplina y creatividad transformemos la industria aseguradora del país para que tenga un gran impacto social.”
             </p>
           </blockquote>
           <a
@@ -61,12 +59,7 @@
           <h6>Líder de Finanzas y Actuaría</h6>
           <blockquote>
             <p>
-              "Gestionamos los negocios de manera eficiente y responsable
-              cuidando los recursos a largo plazo y así garantizar los
-              beneficios a nuestros clientes. Además, impulsamos la visión
-              estratégica y el crecimiento sostenible, analizando posibles
-              riesgos y oportunidades para garantizar la solvencia y viabilidad
-              de la Compañía."
+              “Gestionamos los negocios de ASULADO de manera eficiente y responsable cuidando los recursos a largo plazo que garantice los beneficios a nuestros clientes. Además, impulsamos la visión estratégica y el crecimiento sostenible, analizando posibles riesgos y oportunidades para garantizar la solvencia y viabilidad de la Compañía.”
             </p>
           </blockquote>
           <a
@@ -101,14 +94,8 @@
           <h6>Líder de Transformación</h6>
           <blockquote>
             <p>
-              "Promovemos la transformación de la Compañía para que opere de
-              manera digital, gestionando los proyectos a partir de la
-              estrategia, potenciando la innovación, automatización y mejora de
-              los procesos. Somos un engranaje, que pone a disposición las
-              herramientas para que los equipos materialicen cada idea. Somos
-              los embajadores de la marca y la llevamos hasta cada uno de
-              nuestros públicos de interés, con el objetivo de dar a conocer su
-              esencia y propósito dentro de la industria"
+              “Llevamos a ASULADO al siguiente nivel, promoviendo la transformación y la operación digital, gestionando los proyectos a partir de la estrategia y potenciando la innovación, automatización y mejora de los procesos. 
+Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestros públicos de interés, con el objetivo de dar a conocer su esencia y propósito dentro de la industria”
             </p>
           </blockquote>
           <a
@@ -140,15 +127,10 @@
 
         <div class="modal_info_int">
           <h4>Sergio Mauricio Hernández Zapata</h4>
-          <h6>Líder de Operaciones y Servicios</h6>
+          <h6>Líder de Operaciones</h6>
           <blockquote>
             <p>
-              "A través de un equipo integral y competente y utilizando nuevas
-              capacidades tecnológicas, materializamos la propuesta de valor al
-              cliente desde la innovación y la eficiencia, garantizando la
-              operación de ASULADO y poniendo a disposición de nuestros
-              usuarios, canales de atención digitales con calidad y oportunidad
-              que promueven la continuidad y sostenibilidad de la Compañía."
+              “A través de un equipo integral y competente y utilizando nuevas capacidades tecnológicas, materializamos la propuesta de valor al cliente desde la innovación y la eficiencia, garantizando la operación de ASULADO y poniendo a disposición de nuestros usuarios, canales de atención digitales con calidad y oportunidad que promueven la continuidad y sostenibilidad de la compañía.”
             </p>
           </blockquote>
           <a
@@ -183,14 +165,7 @@
           <h6>Líder de Talento Humano</h6>
           <blockquote>
             <p>
-              "Fidelizar y desarrollar el talento humano extraordinario de
-              ASULADO es nuestro propósito. Cuidando la experiencia y
-              garantizando una oferta de valor al empleado, potenciamos el
-              compromiso y favorecemos una cultura sólida y coherente que
-              apalanca el logro de los objetivos, tanto de la Organización, como
-              de sus integrantes. Aquí, más que hacer parte de una Compañía, es
-              la oportunidad para ser impulsores del cambio, motivados por un
-              propósito misional que impacta a toda una industria y un país"
+              “Nuestro propósito es fidelizar y desarrollar el talento humano extraordinario de ASULADO. Cuidando la experiencia y garantizando una oferta de valor al empleado potenciamos el compromiso y favorecemos una cultura sólida y coherente que apalanca el logro de los objetivos, tanto de la organización, como de sus integrantes.  Aquí, más que hacer parte de una compañía, es la oportunidad para ser impulsores del cambio, motivados por un propósito misional que impacta a toda una industria y un país”
             </p>
           </blockquote>
           <a
@@ -225,13 +200,7 @@
           <h6>Líder de Auditoría</h6>
           <blockquote>
             <p>
-              "Inspiramos a los demás para trabajar bajo los pilares de la
-              confianza y la transparencia para asegurar, desde el
-              acompañamiento, el cumplimiento normativo y la adecuada gestión
-              del Sistema de Control Interno. Representamos a un área que está
-              en permanente contacto con los equipos, junto a ellos lideramos y
-              ejecutamos auditorías de los riesgos identificados y potenciales
-              que impactan a la Compañía"
+              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del sistema del control interno.”
             </p>
           </blockquote>
           <a
@@ -266,14 +235,7 @@
           <h6>Líder de Riesgos</h6>
           <blockquote>
             <p>
-              "Contribuimos al propósito superior de la organización
-              implementando estrategias y controles que mitiguen los riesgos
-              técnicos, estratégicos, operacionales y tecnológicos que pueda
-              enfrentar la Compañía. Trabajamos con todos los equipos de
-              ASULADO, a quienes acompañamos en la identificación y la
-              prevención de los riesgos a los que se enfrenta la Organización,
-              para estar preparados a posibles desafíos y saberlos enfrentar de
-              manera analítica, informada y efectiva"
+              “Contribuimos al propósito superior de ASULADO implementando estrategias y controles que mitiguen los riesgos que pueda enfrentar la Compañía. Trabajamos con todos los equipos, a quienes acompañamos en la identificación y la prevención de los riesgos a los que se enfrenta la organización, para estar preparados a posibles desafíos.” 
             </p>
           </blockquote>
           <a
@@ -305,16 +267,10 @@
 
         <div class="modal_info_int">
           <h4>Johana Lizarazo</h4>
-          <h6>Líder de Tecnología y Datos</h6>
+          <h6>Líder de Tecnología </h6>
           <blockquote>
             <p>
-              "Fomentamos la evolución tecnológica con el fin de optimizar la
-              eficiencia operativa, incrementar el valor y fortalecer la
-              sostenibilidad del negocio. Logramos este propósito al incorporar
-              tecnologías avanzadas, soluciones emergentes, analítica de datos y
-              ciberseguridad en los procesos de la Compañía para operar
-              digitalmente, manteniendo siempre la alineación con los objetivos
-              estratégicos de ASULADO."
+              Fomentamos la evolución tecnológica con el fin de optimizar la eficiencia operativa, incrementar el valor y fortalecer la sostenibilidad de ASULADO. Logramos este propósito al incorporar tecnologías avanzadas, soluciones emergentes, analítica de datos y ciberseguridad en los procesos de la compañía para operar digitalmente, manteniendo siempre la alineación con los objetivos estratégicos.
             </p>
           </blockquote>
           <a
@@ -346,11 +302,10 @@
 
         <div class="modal_info_int">
           <h4>Sebastián Mejía</h4>
-          <h6>Líder Jurídico</h6>
+          <h6>Líder legal </h6>
           <blockquote>
             <p>
-              “Más allá de buscar la seguridad jurídica en la Compañía, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
-              Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidir en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y la industria.”
+              “Mas allá de buscar la seguridad jurídica en ASULADO, brindamos confianza, protegemos los intereses de la organización y sus públicos de interés, asegurando el cumplimiento del marco legal y código de buen gobierno corporativo. Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidiendo en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y de la industria.”
               
             </p>
           </blockquote>
@@ -378,7 +333,7 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Patricia Restrepo</h4>
-      <p>CEO</p>
+      <p>Presidente</p>
     </li>
     <li>
       <img
@@ -411,7 +366,7 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Sergio Mauricio Hernández</h4>
-      <p>Líder de Operaciones y Servicios</p>
+      <p>Líder de Operaciones</p>
     </li>
     <li>
       <img
@@ -457,7 +412,7 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Johana Lizarazo</h4>
-      <p>Líder de Tecnología y Datos</p>
+      <p>Líder de Tecnología</p>
     </li>
     <li>
       <img
@@ -469,7 +424,8 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Sebastián Mejía</h4>
-      <p>Líder Jurídico</p>
+      <p>Líder legal </p>
     </li>
   </ul>
 </div>
+
