Alta gerenacia Update

--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -94,7 +94,7 @@
           <h6>Líder de Transformación</h6>
           <blockquote>
             <p>
-              “Llevamos a ASULADO al siguiente nivel, promoviendo la transformación y la operación digital, gestionando los proyectos a partir de la estrategia y potenciando la innovación, automatización y mejora de los procesos. 
+              “Llevamos a ASULADO al siguiente nivel, promoviendo la transformación y la operación digital, gestionando los proyectos a partir de la estrategia y potenciando la innovación, automatización y mejora de los procesos. <br>
 Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestros públicos de interés, con el objetivo de dar a conocer su esencia y propósito dentro de la industria”
             </p>
           </blockquote>
@@ -126,7 +126,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
         </div>
 
         <div class="modal_info_int">
-          <h4>Sergio Mauricio Hernández Zapata</h4>
+          <h4>Sergio Hernandez</h4>
           <h6>Líder de Operaciones</h6>
           <blockquote>
             <p>
@@ -162,7 +162,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
 
         <div class="modal_info_int">
           <h4>Alejandra Osorio</h4>
-          <h6>Líder de Talento Humano</h6>
+          <h6>Líder Talento Humano</h6>
           <blockquote>
             <p>
               “Nuestro propósito es fidelizar y desarrollar el talento humano extraordinario de ASULADO. Cuidando la experiencia y garantizando una oferta de valor al empleado potenciamos el compromiso y favorecemos una cultura sólida y coherente que apalanca el logro de los objetivos, tanto de la organización, como de sus integrantes.  Aquí, más que hacer parte de una compañía, es la oportunidad para ser impulsores del cambio, motivados por un propósito misional que impacta a toda una industria y un país”
@@ -365,7 +365,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
         <i class="q fa-solid fa-quotes"></i>
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
-      <h4>Sergio Mauricio Hernández</h4>
+      <h4>Sergio Hernandez</h4>
       <p>Líder de Operaciones</p>
     </li>
     <li>
@@ -378,7 +378,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Alejandra Osorio</h4>
-      <p>Líder de Talento Humano</p>
+      <p>Líder Talento Humano</p>
     </li>
     <li>
       <img src="/assets/images/altag/Diana Ramírez.png" alt="Diana Ramírez" />
