--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -152,7 +152,7 @@
         <div class="modal_info_int">
           <h5>Sebastián Alberto Rey</h5>
           <p>Presidente de la Junta Directiva</p>
-          <h6>Abogado</h6>
+          <h6>Actuario</h6>
           <ul>
             <li>
               Actuario con orientación en Economía de la Universidad de Buenos
