--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -66,13 +66,35 @@
             >Novedades</a
           >
           <ul tabindex="0" class="dropdown-content">
-            <li><a href="#">Redistribuciones de mesada</a></li>
-            <li><a href="#">Certificado de estudio</a></li>
-            <li><a href="#">Certificado de supervivencia</a></li>
-            <li><a href="#">Novedades de EPS</a></li>
-            <li><a href="#">Novedades de Caja de Compensación</a></li>
-            <li><a href="#">Novedades de cuenta financiera</a></li>
-            <li><a href="#">Novedades Pensión Voluntaria</a></li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html"
+                >Redistribuciones de mesada</a
+              >
+            </li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html">Certificado de estudio</a>
+            </li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html"
+                >Certificado de supervivencia</a
+              >
+            </li>
+            <li><a href="/PORTAL/4_novedades_1.html">Novedades de EPS</a></li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html"
+                >Novedades de Caja de Compensación</a
+              >
+            </li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html"
+                >Novedades de cuenta financiera</a
+              >
+            </li>
+            <li>
+              <a href="/PORTAL/4_novedades_1.html"
+                >Novedades Pensión Voluntaria</a
+              >
+            </li>
           </ul>
         </li>
         <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
