--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -95,7 +95,7 @@
           <blockquote>
             <p>
               “Llevamos a ASULADO al siguiente nivel, promoviendo la transformación y la operación digital, gestionando los proyectos a partir de la estrategia y potenciando la innovación, automatización y mejora de los procesos. <br>
-Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestros públicos de interés, con el objetivo de dar a conocer su esencia y propósito dentro de la industria”
+Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestros públicos de interés, con el objetivo de dar a conocer su esencia y propósito dentro de la industria.”
             </p>
           </blockquote>
           <a
@@ -130,7 +130,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Operaciones</h6>
           <blockquote>
             <p>
-              “A través de un equipo integral y competente y utilizando nuevas capacidades tecnológicas, materializamos la propuesta de valor al cliente desde la innovación y la eficiencia, garantizando la operación de ASULADO y poniendo a disposición de nuestros usuarios, canales de atención digitales con calidad y oportunidad que promueven la continuidad y sostenibilidad de la compañía.”
+              “A través de un equipo integral y competente y utilizando nuevas capacidades tecnológicas, materializamos la propuesta de valor al cliente desde la innovación y la eficiencia, garantizando la operación de ASULADO y poniendo a disposición de nuestros usuarios, canales de atención digitales con calidad y oportunidad que promueven la continuidad y sostenibilidad de la Compañía.”
             </p>
           </blockquote>
           <a
@@ -165,7 +165,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder Talento Humano</h6>
           <blockquote>
             <p>
-              “Nuestro propósito es fidelizar y desarrollar el talento humano extraordinario de ASULADO. Cuidando la experiencia y garantizando una oferta de valor al empleado potenciamos el compromiso y favorecemos una cultura sólida y coherente que apalanca el logro de los objetivos, tanto de la organización, como de sus integrantes.  Aquí, más que hacer parte de una compañía, es la oportunidad para ser impulsores del cambio, motivados por un propósito misional que impacta a toda una industria y un país”
+              “Nuestro propósito es fidelizar y desarrollar el talento humano extraordinario de ASULADO. Cuidando la experiencia y garantizando una oferta de valor al empleado potenciamos el compromiso y favorecemos una cultura sólida y coherente que apalanca el logro de los objetivos, tanto de la Organización, como de sus integrantes.  Aquí, más que hacer parte de una Compañía, es la oportunidad para ser impulsores del cambio, motivados por un propósito misional que impacta a toda una industria y un país.”
             </p>
           </blockquote>
           <a
@@ -200,7 +200,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Auditoría</h6>
           <blockquote>
             <p>
-              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del sistema del control interno.”
+              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del Sistema del Control Interno.”
             </p>
           </blockquote>
           <a
@@ -235,7 +235,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Riesgos</h6>
           <blockquote>
             <p>
-              “Contribuimos al propósito superior de ASULADO implementando estrategias y controles que mitiguen los riesgos que pueda enfrentar la Compañía. Trabajamos con todos los equipos, a quienes acompañamos en la identificación y la prevención de los riesgos a los que se enfrenta la organización, para estar preparados a posibles desafíos.” 
+              “Contribuimos al propósito superior de ASULADO implementando estrategias y controles que mitiguen los riesgos que pueda enfrentar la Compañía. Trabajamos con todos los equipos, a quienes acompañamos en la identificación y la prevención de los riesgos a los que se enfrenta la Organización, para estar preparados a posibles desafíos.” 
             </p>
           </blockquote>
           <a
@@ -270,7 +270,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Tecnología </h6>
           <blockquote>
             <p>
-              Fomentamos la evolución tecnológica con el fin de optimizar la eficiencia operativa, incrementar el valor y fortalecer la sostenibilidad de ASULADO. Logramos este propósito al incorporar tecnologías avanzadas, soluciones emergentes, analítica de datos y ciberseguridad en los procesos de la compañía para operar digitalmente, manteniendo siempre la alineación con los objetivos estratégicos.
+              "Fomentamos la evolución tecnológica con el fin de optimizar la eficiencia operativa, incrementar el valor y fortalecer la sostenibilidad de ASULADO. Logramos este propósito al incorporar tecnologías avanzadas, soluciones emergentes, analítica de datos y ciberseguridad en los procesos de la Compañía para operar digitalmente, manteniendo siempre la alineación con los objetivos estratégicos."
             </p>
           </blockquote>
           <a
@@ -305,7 +305,8 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder legal </h6>
           <blockquote>
             <p>
-              “Mas allá de buscar la seguridad jurídica en ASULADO, brindamos confianza, protegemos los intereses de la organización y sus públicos de interés, asegurando el cumplimiento del marco legal y código de buen gobierno corporativo. Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidiendo en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y de la industria.”
+              “Más allá de buscar la seguridad jurídica en la Compañía, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
+              Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidiendo en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y de la industria.”
               
             </p>
           </blockquote>
