--- a/src/partials/empresa/video.html
+++ b/src/partials/empresa/video.html
@@ -2,7 +2,8 @@
 <section id="as__video" class="as__section as__video">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <iframe
+      <h3 class="as__title_section">¿Qué nos inspira?</h3>
+      <iframe style="margin-top: 4em;"
         src="https://www.youtube.com/embed/MmGoLBfmNHQ?si=8H3BuyQcVEO5K10v"
         title="YouTube video player"
         frameborder="0"
