Add collapsible sections for financial and management reports

--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -2,8 +2,104 @@
   data-tab="{{data}}"
   class="as__gov_int as__g_documentos_tcon_list_int {{cls}}"
 >
-  <h2>Informes financieros</h2>
+  <div class="collapse">
+    <input type="radio" name="my-accordion-1" checked="checked" />
+    <div class="collapse-title">2024</div>
+    <div class="collapse-content">
+      <h3>Informes financieros</h3>
+      <div class="as__desc">
+        <h3>
+          <i class="fa-solid fa-file"></i>
+          Descargables
+        </h3>
+        <ul class="as__desc_items full">
+          <li class="as__desc_item">
+            <a
+              href="/assets/documentos/Financial Statements.pdf"
+              target="_blank"
+            >
+              <div>
+                <b>Estados Financieros y Revelaciones Diciembre 2022 Asulado</b>
+                <span> PDF 1.7 mb </span>
+              </div>
+              <i class="itc fa-light fa-cloud-arrow-down"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <h3>Informes de gestión</h3>
+      <div class="as__desc">
+        <h3>
+          <i class="fa-solid fa-file"></i>
+          Descargables
+        </h3>
+        <ul class="as__desc_items full">
+          <li class="as__desc_item">
+            <a
+              href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
+              target="_blank"
+            >
+              <div>
+                <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
+                <span> PDF 192 kb </span>
+              </div>
+              <i class="itc fa-light fa-cloud-arrow-down"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="collapse">
+    <input type="radio" name="my-accordion-1" />
+    <div class="collapse-title">2023</div>
+    <div class="collapse-content">
+      <h3>Informes financieros</h3>
+      <div class="as__desc">
+        <h3>
+          <i class="fa-solid fa-file"></i>
+          Descargables
+        </h3>
+        <ul class="as__desc_items full">
+          <li class="as__desc_item">
+            <a
+              href="/assets/documentos/Financial Statements.pdf"
+              target="_blank"
+            >
+              <div>
+                <b>Estados Financieros y Revelaciones Diciembre 2022 Asulado</b>
+                <span> PDF 1.7 mb </span>
+              </div>
+              <i class="itc fa-light fa-cloud-arrow-down"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <h3>Informes de gestión</h3>
+      <div class="as__desc">
+        <h3>
+          <i class="fa-solid fa-file"></i>
+          Descargables
+        </h3>
+        <ul class="as__desc_items full">
+          <li class="as__desc_item">
+            <a
+              href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
+              target="_blank"
+            >
+              <div>
+                <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
+                <span> PDF 192 kb </span>
+              </div>
+              <i class="itc fa-light fa-cloud-arrow-down"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
+  <!-- 
   <h3>Informes financieros</h3>
   <div class="as__desc">
     <h3>
@@ -44,7 +140,7 @@
         </a>
       </li>
     </ul>
-  </div>
+  </div> 
  
-  </div>
+  </div>-->
 </div>
