--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2121,41 +2121,6 @@ body {
     }
   }
 }
-.as__desc {
-  @apply p-8 rounded-xl bg-[#E9F5F8] flex flex-col gap-y-4 mb-8;
-  h3 {
-    @apply flex gap-x-4 items-center text-xl text-azul-norm font-je font-normal;
-    i {
-      @apply text-sm transition-colors h-7 w-7 rounded-full text-white bg-azul-mid flex justify-center items-center duration-500 ease-in-out;
-    }
-  }
-  .as__desc_items {
-    @apply flex flex-wrap justify-start items-stretch;
-    .as__desc_item {
-      @apply flex flex-col items-stretch w-full md:w-auto md:basis-1/2 lg:basis-1/3 2xl:basis-1/4 p-2 h-full;
-      a {
-        @apply h-full flex gap-x-4 justify-between w-full items-center text-azul-dark font-light p-4 rounded-lg bg-white border-azul-bright2 border transition-colors hover:bg-azul-light duration-500 ease-in-out;
-        div {
-          @apply grow flex flex-col gap-y-0;
-          b {
-            @apply text-azul-norm font-normal text-lg leading-[1em];
-          }
-          span {
-            @apply text-azul-dark font-light text-sm;
-          }
-        }
-        i.itc {
-          @apply flex-none transition-colors h-12 w-12 rounded-full text-azul-bright bg-white flex justify-center items-center duration-500 ease-in-out border border-azul-bright2 text-2xl;
-        }
-      }
-    }
-    &.full {
-      .as__desc_item {
-        @apply w-full md:w-auto !basis-full;
-      }
-    }
-  }
-}
 
 .as_usability {
   @apply block fixed lg:hidden bottom-5 left-1 z-50;
@@ -2480,9 +2445,9 @@ body {
     @apply text-azul-bold leading-tight max-w-4xl text-lg;
   }
 }
-.as__educa{
+.as__educa {
   @apply bg-BG-4 py-8;
-  img.img_seguro{
+  img.img_seguro {
     @apply mix-blend-multiply w-full max-w-lg;
   }
 }
@@ -2587,6 +2552,68 @@ body {
             }
           }
         }
+      }
+    }
+  }
+}
+.as__g_documentos_tcon_list_int {
+  .collapse {
+    @apply px-4 py-4 bg-alpha-15 rounded-lg;
+    .collapse-title {
+      @apply bg-alpha-30 rounded-lg text-azul-bright font-je text-xl ;
+    }
+    .collapse-content {
+      @apply flex flex-col gap-y-4;
+      h3 {
+        @apply mt-4;
+      }
+    }
+    input {
+      @apply opacity-100 flex justify-end items-center px-8;
+      &:after {
+        content: "\f0d8";
+        font-family: "Font Awesome 6 Pro";
+        @apply text-xl font-bold text-azul-dark;
+      }
+    }
+    input[checked="checked"] {
+      &:after {
+        content: "\f0d7";
+      }
+    }
+  }
+}
+.as__desc {
+  @apply p-8 rounded-xl bg-white flex flex-col gap-y-4;
+  h3 {
+    @apply flex gap-x-4 items-center text-xl text-azul-norm font-je font-normal mb-4;
+    i {
+      @apply text-sm transition-colors h-7 w-7 rounded-full text-white bg-azul-mid flex justify-center items-center duration-500 ease-in-out;
+    }
+  }
+  .as__desc_items {
+    @apply flex flex-wrap justify-start items-stretch;
+    .as__desc_item {
+      @apply flex flex-col items-stretch w-full md:w-auto md:basis-1/2 lg:basis-1/3 2xl:basis-1/4 p-2 h-full;
+      a {
+        @apply h-full flex gap-x-4 justify-between w-full items-center text-azul-dark font-light p-4 rounded-lg bg-white border-azul-bright2 border transition-colors hover:bg-azul-light duration-500 ease-in-out;
+        div {
+          @apply grow flex flex-col gap-y-0;
+          b {
+            @apply text-azul-norm font-normal text-lg leading-[1em];
+          }
+          span {
+            @apply text-azul-dark font-light text-sm;
+          }
+        }
+        i.itc {
+          @apply flex-none transition-colors h-12 w-12 rounded-full text-azul-bright bg-white flex justify-center items-center duration-500 ease-in-out border border-azul-bright2 text-2xl;
+        }
+      }
+    }
+    &.full {
+      .as__desc_item {
+        @apply w-full md:w-auto !basis-full;
       }
     }
   }
