--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -200,7 +200,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Auditoría</h6>
           <blockquote>
             <p>
-              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del Sistema del Control Interno.”
+              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del Sistema de Control Interno.”
             </p>
           </blockquote>
           <a
@@ -305,7 +305,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder legal </h6>
           <blockquote>
             <p>
-              “Más allá de buscar la seguridad jurídica en la Compañía, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
+              “Más allá de buscar la seguridad jurídica en ASULADO, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
               Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidiendo en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y de la industria.”
               
             </p>
