--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -200,7 +200,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
           <h6>Líder de Auditoría</h6>
           <blockquote>
             <p>
-              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del Sistema de Control Interno.”
+              “Impulsamos a que en ASULADO se trabaje bajo los pilares de la confianza y la transparencia desde el acompañamiento, el cumplimiento normativo y la adecuada gestión del Sistema del Control Interno.”
             </p>
           </blockquote>
           <a
