--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -4,7 +4,7 @@
 >
   <div class="collapse">
     <input type="radio" name="my-accordion-1" checked="checked" />
-    <div class="collapse-title">2024</div>
+    <div class="collapse-title">2023</div>
     <div class="collapse-content">
       <h3>Informes financieros</h3>
       <div class="as__desc">
@@ -15,12 +15,12 @@
         <ul class="as__desc_items full">
           <li class="as__desc_item">
             <a
-              href="/assets/documentos/Financial Statements.pdf"
+              href="/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf"
               target="_blank"
             >
               <div>
-                <b>Estados Financieros y Revelaciones Diciembre 2022 Asulado</b>
-                <span> PDF 1.7 mb </span>
+                <b>Estados Financieros y revelaciones diciembre 2023 Asulado.pdf</b>
+                <span> PDF 1.9 mb </span>
               </div>
               <i class="itc fa-light fa-cloud-arrow-down"></i>
             </a>
@@ -36,12 +36,12 @@
         <ul class="as__desc_items full">
           <li class="as__desc_item">
             <a
-              href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
+              href="/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf"
               target="_blank"
             >
               <div>
-                <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
-                <span> PDF 192 kb </span>
+                <b>Informe de gestión ASULADO 2023</b>
+                <span> PDF 12.9 mb </span>
               </div>
               <i class="itc fa-light fa-cloud-arrow-down"></i>
             </a>
@@ -52,7 +52,7 @@
   </div>
   <div class="collapse">
     <input type="radio" name="my-accordion-1" />
-    <div class="collapse-title">2023</div>
+    <div class="collapse-title">2022</div>
     <div class="collapse-content">
       <h3>Informes financieros</h3>
       <div class="as__desc">
