--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1611,9 +1611,11 @@ body {
       @apply bg-white rounded-b-lg p-4;
       .as__g_documentos_tcon_list_int {
         @apply hidden lg:grid-cols-2 lg:grid-rows-3 lg:gap-4;
+
         &.active {
           @apply flex flex-col lg:grid;
         }
+
         .tcon {
           @apply border border-[#F4F4F7] rounded-lg p-4 flex flex-col gap-y-4;
           i.tcon_icon {
@@ -2562,7 +2564,7 @@ body {
   .collapse {
     @apply px-4 py-4 bg-alpha-15 rounded-lg;
     .collapse-title {
-      @apply bg-alpha-30 rounded-lg text-azul-bright font-je text-xl;
+      @apply bg-alpha-30 rounded-lg text-azul-dark font-je text-4xl;
     }
     .collapse-content {
       @apply flex flex-col gap-y-4;
@@ -2584,6 +2586,7 @@ body {
       }
     }
   }
+  
 }
 .as__desc {
   @apply p-8 rounded-xl bg-white flex flex-col gap-y-4;
@@ -2618,5 +2621,12 @@ body {
         @apply w-full md:w-auto !basis-full;
       }
     }
+  }
+}
+
+.as_documentos_grd {
+  @apply flex flex-col gap-8 md:!flex-row justify-between items-start ;
+  .as_documentos_grd_item {
+    @apply w-full md:w-1/2 flex flex-col gap-4;
   }
 }
