--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -5,96 +5,110 @@
   <div class="collapse">
     <input type="radio" name="my-accordion-1" checked="checked" />
     <div class="collapse-title">2023</div>
-    <div class="collapse-content">
-      <h3>Informes financieros</h3>
-      <div class="as__desc">
-        <h3>
-          <i class="fa-solid fa-file"></i>
-          Descargables
-        </h3>
-        <ul class="as__desc_items full">
-          <li class="as__desc_item">
-            <a
-              href="/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf"
-              target="_blank"
-            >
-              <div>
-                <b>Estados Financieros y revelaciones diciembre 2023 Asulado.pdf</b>
-                <span> PDF 1.9 mb </span>
-              </div>
-              <i class="itc fa-light fa-cloud-arrow-down"></i>
-            </a>
-          </li>
-        </ul>
+    <div class="as_documentos_grd collapse-content">
+      <div class="as_documentos_grd_item">
+        <h3>Informes financieros</h3>
+        <div class="as__desc">
+          <h3>
+            <i class="fa-solid fa-file"></i>
+            Descargables
+          </h3>
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b
+                    >Estados Financieros y revelaciones diciembre 2023
+                    Asulado.pdf</b
+                  >
+                  <span> PDF 1.9 mb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <h3>Informes de gestión</h3>
-      <div class="as__desc">
-        <h3>
-          <i class="fa-solid fa-file"></i>
-          Descargables
-        </h3>
-        <ul class="as__desc_items full">
-          <li class="as__desc_item">
-            <a
-              href="/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf"
-              target="_blank"
-            >
-              <div>
-                <b>Informe de gestión ASULADO 2023</b>
-                <span> PDF 12.9 mb </span>
-              </div>
-              <i class="itc fa-light fa-cloud-arrow-down"></i>
-            </a>
-          </li>
-        </ul>
+      <div class="as_documentos_grd_item">
+        <h3>Informes de gestión</h3>
+        <div class="as__desc">
+          <h3>
+            <i class="fa-solid fa-file"></i>
+            Descargables
+          </h3>
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b>Informe de gestión ASULADO 2023</b>
+                  <span> PDF 12.9 mb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
   <div class="collapse">
     <input type="radio" name="my-accordion-1" />
     <div class="collapse-title">2022</div>
-    <div class="collapse-content">
-      <h3>Informes financieros</h3>
-      <div class="as__desc">
-        <h3>
-          <i class="fa-solid fa-file"></i>
-          Descargables
-        </h3>
-        <ul class="as__desc_items full">
-          <li class="as__desc_item">
-            <a
-              href="/assets/documentos/Financial Statements.pdf"
-              target="_blank"
-            >
-              <div>
-                <b>Estados Financieros y Revelaciones Diciembre 2022 Asulado</b>
-                <span> PDF 1.7 mb </span>
-              </div>
-              <i class="itc fa-light fa-cloud-arrow-down"></i>
-            </a>
-          </li>
-        </ul>
+    <div class="as_documentos_grd collapse-content">
+      <div class="as_documentos_grd_item">
+        <h3>Informes financieros</h3>
+        <div class="as__desc">
+          <h3>
+            <i class="fa-solid fa-file"></i>
+            Descargables
+          </h3>
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Financial Statements.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b
+                    >Estados Financieros y Revelaciones Diciembre 2022
+                    Asulado</b
+                  >
+                  <span> PDF 1.7 mb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <h3>Informes de gestión</h3>
-      <div class="as__desc">
-        <h3>
-          <i class="fa-solid fa-file"></i>
-          Descargables
-        </h3>
-        <ul class="as__desc_items full">
-          <li class="as__desc_item">
-            <a
-              href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
-              target="_blank"
-            >
-              <div>
-                <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
-                <span> PDF 192 kb </span>
-              </div>
-              <i class="itc fa-light fa-cloud-arrow-down"></i>
-            </a>
-          </li>
-        </ul>
+      <div class="as_documentos_grd_item">
+        <h3>Informes de gestión</h3>
+        <div class="as__desc">
+          <h3>
+            <i class="fa-solid fa-file"></i>
+            Descargables
+          </h3>
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
+                  <span> PDF 192 kb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
